feat: #12 Update Delete Profile go doc
